--- a/views/index.jade
+++ b/views/index.jade
@@ -10,8 +10,8 @@ block content
 
 
     .row
-      .col-xs-12.col-sm-6.col-md-4
-        img.panel.panel-default(style="width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
+      .col-xs-12.col-sm-6.col-md-4.center
+        img.panel.panel-default(style="width: 100%; max-width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
       .col-xs-12.col-sm-6.col-md-8
         .panel.panel-primary
           .panel-heading
