--- a/public/css/all.css
+++ b/public/css/all.css
@@ -96,6 +96,11 @@ main.pushed {
   color: white;
 }
 
+#sidebar ul.nav li a:hover, #sidebar li.active a {
+  color: #222222;
+  background-color: #e6e6e6;
+}
+
 #sidebar-pic {
   border: 2px solid #222222;
   width: 40%;
@@ -125,7 +130,7 @@ main.pushed {
 }
 
 #day-controls.short {
-  width: 40%;
+  width: 20%;
 }
 
 
