--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,162 +1,41 @@
 doctype html
+
 html
   head
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    meta(name="description", content="")
+    //meta(name="description", content="")
     meta(name="author", content="Frank Matranga")
 
-    // Title is different for each page
     title= title
 
-    // Bootstrap
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
     link(rel='stylesheet', href='https://bootswatch.com/cosmo/bootstrap.min.css')
-
-    // Material Design
-    //link(rel='stylesheet', href='/stylesheets/materialize.min.css')
-
-    // JQuery
-    link(rel="stylesheet", href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/black-tie/jquery-ui.css")
-
-    // Font Awesome
     link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
-
-    // My own
+    link(rel="stylesheet", href="/css/tooltipster.css")
+    link(rel="stylesheet", href="/css/themes/tooltipster-shadow.css")
+    link(rel="stylesheet", href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/black-tie/jquery-ui.css")
     link(rel="stylesheet", href="/css/all.css")
+    // My own ^^^
+    
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
     script(src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js")
     script(src="/javascripts/jquery.tooltipster.min.js")
 
-    link(rel="stylesheet", href="/css/tooltipster.css")
-    link(rel="stylesheet", href="/css/themes/tooltipster-shadow.css")
-    
   body
-    header
-      nav.navbar.navbar-default.navbar-fixed-top#real-nav
-        .container
-          .navbar-header
-            button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
-              span.sr-only Toggle navigation
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-            a.navbar-brand(href=(title=="Worker" ? "#": "/")) Worker
-          #navbar.navbar-collapse.collapse
-            ul.nav.navbar-nav
-              li(class=(title=="Adiutor" || title=="Your Home" ? "active" : ""))
-                a(href="/") Home
-              li(class=(helpers.isPage(page, "users")))
-                a(href="/users") Users
-              li(class=(helpers.isPage(page, "advisements")))
-                a(href="/advisements") Advisements
-                
-              if loggedIn
-                li(class=(helpers.isPage(page, "teachers")))
-                  a(href="/teachers") Teachers
-                li(class=(helpers.isPage(page, "courses")))
-                  a(href="/courses") Courses
-                li(class=(helpers.isPage(page, "chat")))
-                  a(href="/chat") Chat
-                //
-                  li
-                    a(target="_blank", href="https://bitbucket.org/apexal/adiutor") Source
-            ul.nav.navbar-nav.navbar-right
-              
-              if loggedIn
-                li.dropdown
-                  a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')= currentUser.firstName + " "+currentUser.lastName
-                      span.caret
-                  ul.dropdown-menu(role='menu')
-                    if loggedIn
-                      li
-                        a(href="/users/"+currentUser.username) View Profile
-                      li
-                        a(href="/users/profile") Edit Profile
-                      li
-                          a(href='/logout') Logout
-              else
-                li
-                  a(href="/login") Not Logged In
+    include /header
+    
     if loggedIn
-      aside#sidebar
-        section.center
-          h3 Hello, #{currentUser.firstName}
-        section.center
-          a(href="/users/"+currentUser.username)
-            img#sidebar-pic(src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg")
-          br
-          br
-          span Last login was 52 years ago.
-          hr
-          
-          
-        section
-          ul.nav
-            li.active
-              a(href="/days") Reminders
-                span.badge.right 0
-            li
-              a(href="#") Grades
-                
-            li
-              a(href="#") Friends
-                span.badge.right 0
-            li
-              a(href="#") Meetings
-                span.badge.right 0
-          hr
-          
-          
-        section#day-controls(class=(helpers.isShort(previous, next)))
-          span
-            a.fa.fa-calendar(href="/days", title="View all upcoming and past days!")
-          span
-            a(href="/days/today", title="View the work due today!") T
-          span
-            a(href="/days/closest", title="Find the closest day from today that you have work!") C
-          
-          if previous
-            span
-              a.fa.fa-arrow-left(href='/days/'+previous, title="View the previous day!")
-          if next
-            span
-              a.fa.fa-arrow-right(href='/days/'+next, title="View the next day!")     
-        hr
+      include /sidebar
 
     main(class=(loggedIn ? "pushed" : ""))
-      block content
-      
+      block content      
       if loggedIn && helpers.isPage(page, "chat") == false
         include /chatbox
     
-      if loggedIn
-        footer
-          .navbar.navbar-default.navbar-fixed-bottom#real-bottom-nav(style="z-index: 50;").visible-xs
-            #mobile-bottom-bar
-              span
-                a.fa.fa-calendar(href="/days")
-              span
-                a(href="/days/today") T
-              span
-                a(href="/days/closest") C
-              
-              if previous
-                span
-                  a.fa.fa-arrow-left(href='/days/'+previous)
-              else
-                span.disabled
-                  a.fa.fa-arrow-left(href='#')
-              if next
-                span
-                  a.fa.fa-arrow-right(href='/days/'+next)
-              else
-                span.disabled
-                  a.fa.fa-arrow-right(href='#')
-              
-              a(href="/users/"+currentUser.username)
-                img.right.navbar-pic(src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg", data-username=currentUser.username)
+    if loggedIn
+      include /footer
     
     script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js")
     
