Cleaned up public JS and commented on it all

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -91,16 +91,12 @@ main.pushed {
   height: 100%;
 }
 
-#sidebar ul.nav a{
+#sidebar ul.nav a, #day-controls a{
   text-decoration: none;
   color: white;
 }
 
-<<<<<<< HEAD
 #sidebar ul.nav li a:hover, #sidebar ul.nav li.active a {
-=======
-#sidebar ul.nav li a:hover, #sidebar li.active a {
->>>>>>> e73b362d247bfae5ea0226f8a9f1222e3ba78362
   color: #222222;
   background-color: #e6e6e6;
 }
