--- a/views/days/index.jade
+++ b/views/days/index.jade
@@ -6,4 +6,4 @@ block content
     .page-header
       h1 Days
     
-    span.user-badge fmatranga18
+    span.user-badge(data-username="fmatranga18") fmatranga18
