--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -45,9 +45,10 @@ header
                 a(href="http://moodle.regis.org/my/", target="_blank") Moodle
               li
                   a(href="https://owa.regis.org/owa/", target="_blank") Email
-            //
-              li
-                a(target="_blank", href="https://bitbucket.org/apexal/adiutor") Source
+          
+          li
+            a(href="#", data-toggle="modal", data-target="#feedback-modal") Offer Feedback
+          
         ul.nav.navbar-nav.navbar-right
           if loggedIn
             li.dropdown
