--- a/views/admin/logs.jade
+++ b/views/admin/logs.jade
@@ -14,7 +14,6 @@ block content
             th When
           for log in logs
             tr
-              td
-                a.undecorated(href="/users/"+log.who.username, title=log.who.username)= log.who.fullName
+              td.user-badge(title=log.who.username, data-username=log.who.username)= log.who.fullName
               td= log.what
               td(title=moment(log.when).format("dddd, MMMM Do YYYY, h:mm:ss a"))= moment(log.when).fromNow()
