--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,7 @@ html
       include /parts/sidebar
 
     main(class=(loggedIn ? "pushed" : ""))
+      include /parts/feedback
       block content      
       if loggedIn && helpers.isPage(page, "chat") == false
         include /chat/chatbox
@@ -28,9 +29,8 @@ html
       include /parts/footer
     
     script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js")
-    
-    if loggedIn
-      script(src='/javascripts/sockets.js')
-    script(src='/socket.io/socket.io.js')
     script(src='/javascripts/effects.js')
+    if loggedIn
+      script(src='/socket.io/socket.io.js')
+      script(src='/javascripts/sockets.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
