--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -1,8 +1,7 @@
 aside#sidebar
   br
-  section.center
-    a(href="/users/"+currentUser.username)
-      img#sidebar-pic(src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg")
+  section.center  
+    img#sidebar-pic.user-badge(src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg", data-username=currentUser.username)
     br
     #user-status.dropdown
       b.dropdown-toggle(data-toggle="dropdown") Online
