--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -69,8 +69,18 @@ block content
     .row
       .col-xs-12
         hr
+        button.btn.btn-default.dropdown-toggle(data-toggle="dropdown", ara-expanded="false", type="button") Actions 
+          span.caret
+        ul.dropdown-menu(role="menu")
+          li
+            a(href="/users/"+user.username+"/schedule") View Schedule
+          li
+            a(href="mailto:"+user.email) Email
+          li
+            a(href="http://moodle.regis.org/user/profile.php?id="+user.mID) Moodle Profile
+        
         a.btn.btn-primary(href="/users") Back to User List
-
+      
 mixin class(course)
   .col-xs-12.col-sm-6.col-md-4
     .panel.panel-default
