--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -32,7 +32,7 @@ aside#sidebar
   section
     ul.nav
       li
-        a(href="/days") Reminders
+        a(href="#", data-target="#reminders-modal", data-toggle="modal") Reminders
           span.badge.right 0
       li
         a(href="#") Grades
