--- a/views/parts/reminders.jade
+++ b/views/parts/reminders.jade
@@ -5,7 +5,7 @@
         button.close(type='button', data-dismiss='modal', aria-label='Close')
           span(aria-hidden='true') ×
         h3.modal-title Reminders
-      table.table.table-hover#reminder-table
+      table.table.table-hover#reminder-table(style="margin-bottom: 0;")
         tr
           td.center No reminders!
       form.form-inline#reminder-form(role="form")
