--- a/views/parts/css.jade
+++ b/views/parts/css.jade
@@ -1,7 +1,6 @@
 link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
 link(rel='stylesheet', href='https://bootswatch.com/cosmo/bootstrap.min.css')
 link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
-link(rel="stylesheet", href="/css/tooltipster.css")
-link(rel="stylesheet", href="/css/themes/tooltipster-shadow.css")
 link(rel="stylesheet", href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/black-tie/jquery-ui.css")
 link(rel="stylesheet", href="/css/all.css")
+link(rel="stylesheet", href="/css/"+cssName)
