--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -7,7 +7,7 @@ header
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href=(title=="Worker" ? "#": "/")) Worker
+        a.navbar-brand(href="#") Adiutor
       #navbar.navbar-collapse.collapse
         ul.nav.navbar-nav
           li(class=(title=="Adiutor" || title=="Your Home" ? "active" : ""))
