--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -28,7 +28,7 @@ aside#sidebar
           li(class=( helpers.isPage(page, "admin/logs")? "active" : ""))
             a(href="/admin/logs") User Logs
           li
-            a(href="#") User Feedback
+            a(href="/feedback") User Feedback
     hr
     
   section
