--- a/views/users/login.jade
+++ b/views/users/login.jade
@@ -13,6 +13,8 @@ block content
             I do not store any passwords at all. I just pass what you enter here to the Regis login page to 
             determine whether correct credentials are entered or not. This is just to remove the need for
             registration and make logging in simpler.
+            #[br]
+            Don't believe me? See #[a(target="_blank", href="https://github.com/Apexal/adiutor/blob/master/routes/index.js") for yourself].
           
   .container
     .page-header
