--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -64,4 +64,4 @@ header
                       a(href='/logout') Logout
           else
             li
-              a(href="/login") Not Logged In
+              a(href="#", data-toggle="modal", data-target="#login-modal") Not Logged In
