--- a/views/users/login.jade
+++ b/views/users/login.jade
@@ -1,7 +1,8 @@
 extends /layout
 
 block content
-  .modal.fade#login-modal
+  
+  .modal.fade
     .modal-dialog
       .modal-content
         .modal-header
