Implemented teacher badges

--- a/views/days/index.jade
+++ b/views/days/index.jade
@@ -7,3 +7,4 @@ block content
       h1 Days
     
     span.user-badge(data-username="fmatranga18") fmatranga18
+    span.teacher-badge(data-username="mvode") mvode
