--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,6 +34,8 @@ html
       include /parts/footer
     
     script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js")
+    if loggedIn
+      script(src='/javascripts/modals.js')
     script(src='/javascripts/effects.js')
     if loggedIn
       script(src='/socket.io/socket.io.js')
